<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:title="@string/menu_home">
        <item
            android:title="@string/menu_principal"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/menu_principal_depart"
            android:title="@string/departamentos"
            />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />
        <item
            android:title="@string/menu_home" />


    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_config"
            android:title="@string/config" />
        <item
            android:id="@+id/nav_support"
            android:title="@string/support" />
    </group>
</menu>